tests/baselines/reference/parserES5SymbolIndexer2.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolIndexer2.ts(2,9): error TS1188: 'Symbol' indexers are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolIndexer2.ts(2,9): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolIndexer2.ts (2 errors) ====
    class C {
        [s: Symbol]: string;
            ~~~~~~
!!! error TS1188: 'Symbol' indexers are only available when targeting ECMAScript 6 and higher.
            ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }